# skill-deck

./: .cursorrules  .gitignore  .windsurfrules  AGENTS.md  CHANGELOG.md  CHANGELOG_PLAN.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  FUTURE_IMPLEMENTATION_PLAN.md  GEMINI.md  README.md  RELEASE_PLAN.md  SECURITY.md  THEME_REDESIGN_TRACE.md  corrected-post.txt  package.json  pnpm-lock.yaml  vite.config.js
.github/: copilot-instructions.md
.github/workflows/: ci.yml  release.yml
docs/: skill-discovery.md
src/: app.css  app.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/agents/: claude_plugins.rs  mod.rs  registry.rs  scanner.rs
src-tauri/src/ai/: agent.rs  azure_foundry.rs  cancel.rs  mod.rs  ollama.rs  provider.rs  registry.rs  session.rs  tools.rs
src-tauri/src/commands/: ai.rs  context.rs  injection.rs  mod.rs  preferences.rs  skills.rs  updates.rs
src-tauri/src/detection/: mod.rs  repo_detector.rs  skill_discovery.rs  skill_history.rs  skill_identity.rs  skills_registry.rs  terminal_inject.rs  update_checker.rs  window_at_point.rs
src-tauri/src/detection/marketplaces/: clawhub.rs  mod.rs  skills_sh.rs  types.rs
src-tauri/src/models/: agent.rs  config.rs  mod.rs  skill.rs
src-tauri/src/parsers/: claude_hooks.rs  frontmatter.rs  mod.rs  skill_md.rs
src/lib/components/: AgentBadge.svelte  AgentGroup.svelte  ConfirmPopover.svelte  ContextBar.svelte  DiffModal.svelte  EmojiPickerPopover.svelte  FacetBar.svelte  FullSkillModal.svelte  Overlay.svelte  RegistryTab.svelte  SearchBar.svelte  SkillCard.svelte  SkillGraphView.svelte  SkillRow.svelte  SkillTree.svelte  TabBar.svelte  ThemeMenu.svelte  Toast.svelte
src/lib/stores/: ai.svelte.ts  emojiPicker.svelte.ts  fontScale.svelte.ts  skills.svelte.ts  theme.svelte.ts
src/lib/types/: ai.ts  index.ts
src/lib/utils/: diffLines.ts  formatTime.ts  highlight.ts  (+1 more)
src/routes/: +layout.ts  +page.svelte
(+7 files in other folders)
