[package]
name = "skill-deck"
version = "0.1.2"
description = "Universal coding agent skill browser"
authors = ["Ahmad Adi"]
edition = "2021"
license = "MIT"

[lib]
name = "skill_deck_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# --- Tauri core ---
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
tauri-plugin-global-shortcut = "2"
tauri-plugin-fs = "2"

# --- Serialization ---
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"

# --- System detection ---
sysinfo = "0.34"

# --- Async ---
tokio = { version = "1", features = ["full"] }

# --- Markdown/frontmatter parsing ---
gray_matter = "0.2"

# --- Error handling ---
thiserror = "2"
anyhow = "1"

# --- Logging ---
log = "0.4"
env_logger = "0.11"

# --- Path utilities ---
dirs = "6"
glob = "0.3"
walkdir = "2"

# --- Pattern matching ---
regex = "1"

# --- Hashing (snapshot integrity) ---
sha2 = "0.10"

# --- HTTP client (for update checking via GitHub API) ---
reqwest = { version = "0.12", features = ["json"] }

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.61", features = [
  "Win32_UI_WindowsAndMessaging",
  "Win32_UI_Input_KeyboardAndMouse",
  "Win32_System_Threading",
  "Win32_System_Diagnostics_ToolHelp",
  "Win32_System_DataExchange",
  "Win32_System_Memory",
  "Win32_Foundation",
  "Win32_System_ProcessStatus",
  "Win32_System_Diagnostics_Debug",
  "Win32_System_LibraryLoader",
] }

[target.'cfg(target_os = "linux")'.dependencies]
x11rb = { version = "0.13", features = ["all-extensions"] }
procfs = "0.16"

[target.'cfg(target_os = "macos")'.dependencies]
cocoa = "0.26"
objc = "0.2"

[dev-dependencies]
tempfile = "3"

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
panic = "abort"
strip = true
